kubernetes/fastify/environments/dev/fastify-basic/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    monitoring: prometheus
