kubernetes/fastify/environments/dev/fastify-basic/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify-basic
  namespace: tet
  labels:
    app: fastify-basic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastify-basic
  template:
    metadata:
      labels:
        editor: vscode
        app: fastify-basic
    spec:
      containers:
        - name: fastify-basic
          image: asdutoit/fastify-basic:1.7
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 3002
              scheme: HTTP
          ports:
            - containerPort: 3002
              protocol: TCP
      imagePullSecrets:
        - name: dockerconfigjson
