kubernetes/fastify/environments/dev/fastify-basic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastify-basic-service
  namespace: backend
  labels:
    app: fastify-basic-monitoring
spec:
  selector:
    app: fastify-basic
  ports:
    - name: http
      protocol: TCP
      port: 3001 # External port on the service
      targetPort: http # Port on the pod
